--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-.home-container{
-    background: antiquewhite;
-    width:100%;
-    height:auto;
+body{
+    margin:0px
 }
-h1{
-    color:red;
-}
+
+
+
